#40 Add menu item struct & handler for getting restaurant menu
