# docs/swagger/swagger.yaml
@@ -16,6 +16,19 @@ definitions:
       longitude:
         type: number
     type: object
+  domain.MenuItem:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      image:
+        type: string
+      restaurant_id:
+        type: integer
+      title:
+        type: string
+    type: object
   domain.Restaurant:
     properties:
       id:
@@ -375,6 +388,52 @@ paths:
       summary: Create Category
       tags:
       - categories
+  /restaurants/{rid}/menu:
+    get:
+      consumes:
+      - application/json
+      description: get restaurant menu
+      parameters:
+      - description: Restaurant id
+        in: path
+        name: rid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.MenuItem'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "403":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - UserAuth: []
+      - RestaurantAuth: []
+      summary: Get Restaurant Menu
+      tags:
+      - restaurants
   /restaurants/sign-in:
     post:
       consumes:
